[package]
name = "raft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "1.0.0"
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "macros", "net", "time", "signal", "io-util"] }
tokio-util = "0.7.15"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
